force-app/main/default/objects/Module__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount</label>
    <type>Checkbox</type>
</CustomField>