force-app/main/default/objects/Module__c/fields/Approvers__c.field-meta.xml
<CustomField>
    <fullName>Approvers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approvers</label>
    <referenceTo>Free_goods__c</referenceTo>
    <relationshipLabel>Module</relationshipLabel>
    <relationshipName>Module</relationshipName>
    <type>Lookup</type>
</CustomField>