force-app/main/default/objects/Module__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel</label>
    <type>Checkbox</type>
</CustomField>