force-app/main/default/objects/Module__c/fields/Conmmerical_team__c.field-meta.xml
<CustomField>
    <fullName>Conmmerical_team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conmmerical team</label>
    <type>Checkbox</type>
</CustomField>