force-app/main/default/objects/Module__c/fields/Division_Region_Area_Channel__c.field-meta.xml
<CustomField>
    <fullName>Division_Region_Area_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Division/Region/Area/Channel</label>
    <type>Checkbox</type>
</CustomField>