force-app/main/default/objects/Module__c/fields/MFM_team__c.field-meta.xml
<CustomField>
    <fullName>MFM_team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MFM team</label>
    <type>Checkbox</type>
</CustomField>