force-app/main/default/objects/Module__c/fields/Requet_type__c.field-meta.xml
<CustomField>
    <fullName>Requet_type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requet type</label>
    <type>Checkbox</type>
</CustomField>