force-app/main/default/objects/Module__c/fields/Sales_team__c.field-meta.xml
<CustomField>
    <fullName>Sales_team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales team</label>
    <type>Checkbox</type>
</CustomField>