force-app/main/default/objects/Module__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>type</label>
    <type>Checkbox</type>
</CustomField>